Fixed error wirh WAVE showing contrast issue on Title

--- a/app.css
+++ b/app.css
@@ -11,12 +11,14 @@ header {
   padding-top: 100px;
   font-size: larger;
   color: #eeeeee;
+  background-color: #3d3d3d00;
   text-shadow:0px 0px 2px rgba(0, 0, 2px, 0.69);
 }
 
 body {
   background-image: url(images/congruent_outline.png);
   background-size: 250px;
+  background-color: #3d3d3d;
   margin: auto;
   padding: 0 10px;
   text-align: center;
